# votingdapp_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  structure-file
backend/: .dockerignore  Cargo.toml  Dockerfile  hash_admin.rs
backend/migrations/: 0001_init_schema.sql  0002_indexes.sql  0003_onchain.sql
backend/src/: lib.rs  main.rs  state.rs
backend/src/cosm/: client.rs  mod.rs  queries.rs  tx.rs
backend/src/db/: mod.rs  mysql.rs  redis.rs
backend/src/middleware/: auth_guard.rs  mod.rs
backend/src/models/: admin_user.rs  mod.rs  poll.rs  result_cache.rs  vote_idx.rs
backend/src/routes/: admin.rs  auth.rs  mod.rs  public.rs
backend/src/security/: jwt.rs  mod.rs  password.rs
backend/src/tests/: http_smoke.rs
backend/src/util/: config.rs  error.rs  mod.rs  slug.rs
config/production/: backend.env  chain.env  deploy.toml  frontend.env
config/sandbox/: backend.env  chain.env  contracts.env  frontend.env
deploy/: README.md  env.production.toml  env.sandbox.toml
deploy/ci/: github-actions.yml
deploy/ts/: package.json  tsconfig.json
docs/: api-contracts.md  data-model-mysql.md  data-model.md  ops-runbook.md  sequence-flows.md  system-architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
offchain/: .dockerignore
onchain/: Makefile
scripts/: db_migrate.sh  deploy_contract.ts  deploy_contract.tsZone.Identifier  export_env.sh  init_mysql.sql  refresh_results_cache.ts  set_env_from_deploy.ts
(+50 files in other folders)
