[package]
name = "voting-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features=["rt-multi-thread","macros"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
sqlx = { version="0.7", features=[
  "runtime-tokio-rustls","mysql","macros","chrono","uuid","migrate"
] }
redis = { version="0.24", features=["tokio-comp"] }
dotenvy = "0.15"
anyhow = "1"
tower-http = { version="0.5", features=["cors","trace"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter","fmt"] }
uuid = { version="1", features=["v4","serde"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
time = "0.3"
thiserror = "1"
rand = "0.8"   # <-- add this if you switch to `use rand::rngs::OsRng;`
# ⬇⬇⬇ tambahkan ini
base64ct = "=1.7.3"
nanoid = "0.4"

# ===== Cosmos SDK / gRPC signing =====
cosmrs = { version = "0.18", features = ["grpc","cosmwasm"] }
prost = "0.13"
tonic = { version = "0.12", features = ["tls"] }
hex = "0.4"
base64 = "0.22"
